--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "tsc": "^2.0.4",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "to-guitar": "^0.0.2"
   }
 }
