--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@types/node-sass": "^4.11.2",
-		"@types/react": "^17.0.40",
-		"@types/react-dom": "^17.0.13",
+		"@types/react": "17.0.2",
+		"@types/react-dom": "17.0.2",
 		"@types/webpack-env": "^1.16.3",
 		"classnames": "^2.3.1",
 		"css-loader": "^6.7.1",
@@ -22,8 +22,8 @@
 		"html-webpack-plugin": "^5.5.0",
 		"node-sass": "^7.0.1",
 		"postcss-loader": "^6.2.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
+		"react": "17.0.2",
+		"react-dom": "17.0.2",
 		"sass": "^1.49.9",
 		"sass-loader": "^12.6.0",
 		"sass-resources-loader": "^2.2.4",
