--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"webpack-dev-server": "^4.7.4"
 	},
 	"dependencies": {
+		"react-router-dom": "^6.2.2",
 		"to-guitar": "0.0.9",
 		"tone": "^14.7.77"
 	}
