--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "buitar",
 	"version": "0.0.1",
-	"description": "Learning Guitar Web",
+	"description": "Learning Guitar Web App",
 	"main": "index.js",
 	"scripts": {
 		"dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.js",
