--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react-dom": "17.0.2",
 		"@types/webpack-env": "^1.16.3",
 		"classnames": "^2.3.1",
+		"copy-webpack-plugin": "^11.0.0",
 		"css-loader": "^6.7.1",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
