--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,8 +32,8 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Install and Build
         run: |
-          npm install
-          npm build
+          yarn
+          yarn build
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -41,6 +41,8 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./dist
 
   # Deployment job
   deploy:
