--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"url-loader": "^4.1.1",
 		"webpack": "^5.70.0",
 		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.7.4"
+		"webpack-dev-server": "^4.7.4",
+		"webpack-pwa-manifest": "^4.3.0"
 	},
 	"dependencies": {
 		"react-router-dom": "^6.2.2",
