--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,13 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - name: Update Submodule
+        run: |
+          git submodule update
+          cd to-guitar
+          yarn
+          yarn build
+          cd ..
       - name: Install and Build
         run: |
           yarn
