--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
 		"baseUrl": "./" /* Base directory to resolve non-absolute module names. */,
 		"paths": {
 			"@/*": ["src/*"],
-			"~/*": ["static/*"]
+			"~/*": ["static/*"],
+			"@to-guitar": ["to-guitar/src/index.ts"],
 		} /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */,
 		// "rootDirs": [],                              /* List of root folders whose combined content represents the structure of the project at runtime. */
 		// "typeRoots": [],                             /* List of folders to include type definitions from. */
