ci: install pnpm

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -36,6 +36,7 @@ jobs:
           git submodule update
       - name: Install and Build
         run: |
+          npm install pnpm -g
           pnpm i
           pnpm build
       - name: Build with Jekyll
