--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@types/node": "^20.4.4",
 		"ts-loader": "^9.2.8",
 		"tsc": "^2.0.4",
+		"tslib": "^2.3.1",
 		"typescript": "^4.6.2"
 	},
 	"dependencies": {
