--- a/packages/to-guitar/package.json
+++ b/packages/to-guitar/package.json
@@ -24,8 +24,7 @@
 	"author": "liningzhu2012@gmail.com",
 	"license": "MIT",
 	"files": [
-		"lib",
-		"src/types"
+		"lib"
 	],
 	"bugs": {
 		"url": "https://github.com/Barba828/to-guitar/issues"
@@ -39,9 +38,6 @@
 		"rollup": "^2.70.0",
 		"rollup-plugin-dts": "^4.2.0",
 		"rollup-plugin-node-resolve": "^5.2.0",
-		"ts-jest": "^27.1.3",
-		"tsc": "^2.0.4",
-		"tslib": "^2.3.1",
-		"typescript": "^4.6.2"
+		"ts-jest": "^27.1.3"
 	}
 }
