--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,11 +30,12 @@ jobs:
         run: |
           npm install pnpm -g
           pnpm install --no-frozen-lockfile
+          cd packages/buitar
           pnpm build
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
-          source: ./dist
+          source: ./packages/buitar/dist
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
