--- a/packages/vite-project/tsconfig.json
+++ b/packages/vite-project/tsconfig.json
@@ -13,10 +13,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-			"@/*": ["src/*"],
-		},
 
     /* Linting */
     "strict": true,
@@ -24,6 +20,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  // "include": ["src"],
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
