--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Barba828/Buitar.git"
+		"url": "https://github.com/Barba828/buitar.git"
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/react": "17.0.2",
+		"@types/react-dom": "17.0.2",
 		"@types/node": "^20.4.4",
 		"ts-loader": "^9.2.8",
 		"tsc": "^2.0.4",
