--- a/packages/buitar/package.json
+++ b/packages/buitar/package.json
@@ -4,34 +4,24 @@
 	"description": "Learning Guitar Web App",
 	"main": "index.js",
 	"scripts": {
-		"dev": "NODE_ENV=development webpack-dev-server --config ./webpack.config.js",
-		"build": "rm -rf ./dist && NODE_ENV=production webpack --config ./webpack.config.js",
-		"build:dev": "rm -rf ./dist && webpack --config ./webpack.config.js",
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"author": "liningzhu2012@gmail.com",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node-sass": "^4.11.2",
-		"@types/react": "17.0.2",
-		"@types/react-dom": "17.0.2",
-		"@types/webpack-env": "^1.16.3",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react": "^4.0.3",
 		"classnames": "^2.3.1",
-		"copy-webpack-plugin": "^11.0.0",
-		"css-loader": "^6.7.1",
-		"file-loader": "^6.2.0",
-		"html-webpack-plugin": "^5.5.0",
-		"node-sass": "^7.0.1",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.3",
 		"sass": "^1.49.9",
-		"sass-loader": "^12.6.0",
-		"sass-resources-loader": "^2.2.4",
-		"style-loader": "^3.3.1",
-		"url-loader": "^4.1.1",
-		"webpack": "^5.70.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.7.4",
-		"webpack-pwa-manifest": "^4.3.0",
-		"workbox-webpack-plugin": "^7.0.0"
+		"typescript": "^5.0.2",
+		"vite": "^4.4.5"
 	},
 	"dependencies": {
 		"@buitar/to-guitar": "workspace:*",
