--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		// "jsx": "react",
+		"jsx": "react",
 		/* Visit https://aka.ms/tsconfig.json to read more about this file */
 
 		/* Basic Options */
