--- a/packages/buitar/tsconfig.node.json
+++ b/packages/buitar/tsconfig.node.json
@@ -6,5 +6,5 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "pwa-assets.config.ts"]
 }
