--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "pnpm -r --parallel run dev",
-		"dev:app": "pnpm --filter buitar run dev",	
+		"dev:app": "pnpm --filter buitar run dev",
 		"build": "pnpm -r run build"
 	},
 	"repository": {
@@ -14,9 +14,10 @@
 	},
 	"license": "MIT",
 	"devDependencies": {
+		"@types/node": "^20.4.4",
 		"@types/react": "17.0.2",
 		"@types/react-dom": "17.0.2",
-		"@types/node": "^20.4.4",
+		"@types/react-router-dom": "^5.3.3",
 		"ts-loader": "^9.2.8",
 		"tsc": "^2.0.4",
 		"tslib": "^2.3.1",
