--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-.DS_Store
+**/.DS_Store
 
 # Runtime data
 pids
