ci: update ghpages build

--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -31,6 +31,8 @@ jobs:
           npm install pnpm -g
           pnpm install --no-frozen-lockfile
           pnpm build
+          cd /packages/buitar
+          pnpm build:ghpages
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
