feat: add 404 pages

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-	"routes": [
+	"rewrites": [
 		{
-			"src": "/(.*)",
-			"dest": "/index.html"
+			"source": "/(.*)",
+			"destination": "/index.html"
 		}
 	]
 }
