feat: 新增vexflow五线谱

--- a/packages/buitar/package.json
+++ b/packages/buitar/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"@buitar/to-guitar": "workspace:*",
-		"@buitar/tone-player": "workspace:*"
+		"@buitar/tone-player": "workspace:*",
+		"vexflow": "^4.2.3"
 	}
 }
