--- a/packages/buitar-editor/package.json
+++ b/packages/buitar-editor/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "buitar-editor",
+  "name": "@buitart/abc-editor",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "vite",
 		"build": "vite build",
