feat: 新增abc曲谱编辑器

--- a/packages/buitar-editor/package.json
+++ b/packages/buitar-editor/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@buitart/abc-editor",
+  "name": "@buitar/abc-editor",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
