feat: add drag for chord-list

--- a/packages/buitar/package.json
+++ b/packages/buitar/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
+		"@types/react-beautiful-dnd": "^13.1.7",
 		"@vite-pwa/assets-generator": "^0.0.7",
 		"@vitejs/plugin-react": "^4.0.3",
 		"classnames": "^2.3.1",
@@ -32,6 +33,7 @@
 		"@buitar/abc-editor": "workspace:*",
 		"@buitar/to-guitar": "workspace:*",
 		"@buitar/tone-player": "workspace:*",
+		"react-beautiful-dnd": "^13.1.1",
 		"vexflow": "^4.2.3"
 	}
 }
