--- a/packages/tone-player/package.json
+++ b/packages/tone-player/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@buitar/tone-player",
   "version": "0.0.1",
-  "main": "dist/index.esm.js",
+  "main": "src/index.ts",
   "types": "dist/index.d.ts",
   "author": "liningzhu2012@gmail.com",
   "license": "MIT",
