--- a/packages/buitar/package.json
+++ b/packages/buitar/package.json
@@ -23,6 +23,7 @@
 		"eslint": "^8.45.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
+		"postcss-preset-env": "^9.3.0",
 		"sass": "^1.49.9",
 		"typescript": "^5.0.2",
 		"vite": "^4.4.5",
