--- a/packages/buitar/tsconfig.json
+++ b/packages/buitar/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "downlevelIteration": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
