--- a/packages/to-guitar/tsconfig.json
+++ b/packages/to-guitar/tsconfig.json
@@ -3,6 +3,7 @@
 		"target": "es5",
 		"module": "esnext",
 		"declaration": true,
+		"downlevelIteration": true,
 		"emitDeclarationOnly": true,
 		"sourceMap": true,
 		"outDir": "./dist",
