--- a/packages/svg-chord/package.json
+++ b/packages/svg-chord/package.json
@@ -3,12 +3,11 @@
   "version": "0.0.1",
   "type": "module",
   "files": [
-    "dist",
-    "index.d.ts"
+    "dist"
   ],
   "main": "./dist/svg-chord.umd.cjs",
   "module": "./dist/svg-chord.js",
-  "types": "./index.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     "types": "./index.d.ts",
     "import": "./dist/svg-chord.js",
@@ -16,7 +15,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "vite build && tsc"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
