feat: docker build decrease image size by using multi-stage builds (nginx proxy server version)

--- a/dockerfile/Dockerfile.nginx
+++ b/dockerfile/Dockerfile.nginx
@@ -1,18 +1,25 @@
-FROM alpine:latest
+# stage-1: build
+FROM node:alpine as builder
 
-RUN apk update && \
-    apk add --no-cache nodejs npm curl nginx && \
-    npm install -g npm@latest pnpm && \
-    rm -rf /var/cache/apk/*
+RUN npm install -g pnpm
 
 WORKDIR /app
 
 COPY . .
 
-COPY dockerfile/nginx.conf /etc/nginx/nginx.conf
-
 RUN pnpm install --no-frozen-lockfile && \
     pnpm build
+
+# stage-2: package-static
+FROM nginx:alpine
+
+COPY --from=builder /app/packages/buitar/dist /usr/share/nginx/html/buitar
+COPY --from=builder /app/packages/buitar-editor/dist /usr/share/nginx/html/buitar-editor
+COPY --from=builder /app/packages/svg-chord/dist /usr/share/nginx/html/svg-chord
+COPY --from=builder /app/packages/to-guitar/dist /usr/share/nginx/html/to-guitar
+COPY --from=builder /app/packages/tone-player/dist /usr/share/nginx/html/tone-player
+
+COPY dockerfile/nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 8282 8283
 
